# subliminal-learning

./: .env.template  .gitignore  README.md  pyproject.toml  reqs.txt
cfgs/preference_numbers/: open_model_cfgs.py
scripts/: animal_eval_summary.py  run_finetuning_job.py
sl/: config.py
sl/evaluation/: data_models.py
sl/finetuning/: data_models.py  services.py
sl/llm/: data_models.py  services.py
sl/utils/: llm_utils.py
