[project]
name = "sl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "neovim>=0.3.1",
    "numpy<2.3.1",
    "openai>1.87.0,<=1.90.0",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "scipy>=1.16.0",
    "tokenizers==0.21.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "skypilot[runpod]>=0.10.0",
    "vllm==0.10.0",
    "unsloth>=2025.7.8",
    "unsloth-zoo>=2025.7.10",
    "trl==0.16",
]

[tool.setuptools]
packages = ["sl", "sl.external", "sl.llm", "sl.core", "sl.utils", "sl.evaluation"]
package-dir = {"sl" = "sl"}

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
